@@ -169,6 +169,11 @@ Version 1.0dev
 
   Bugfixes
 
+- ``Macros`` class should not return callable functions, but rather a
+  ``Macro`` object, which has a ``render``-method. This makes it
+  possible to use a path-expression to get to a macro without calling
+  it. [malthe]
+  
 - Fixed bug where a repeat-clause would reset the repeat variable
   before evaluating the expression. [malthe]
   
